# 2025_eeyab13

./: .gitignore  ABokanan.txt  adder_8h.html  adder_8h_source.html  files.html  git-cheat-sheet.txt  globals.html  globals_func.html  hi_and_date.cmd  index.html  navtreedata.js  readme.md
.github/workflows/: doxygen-deploy.yml  doxygen-deployed.yml
exercise3/: adder.cpp  adder.h
exercise3/adder_static/lib/: libadder.lib
worksheet3/: adder.h  calc.cpp  hello.cpp  libadder.exp
worksheet4/Calc/: CMakeLists.txt  adder.h
worksheet4/hello_cmake/: CMakeLists.txt
worksheet5/: CMakeLists.txt  Doxyfile  adder.h
worksheet6/QTproject/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.ui
worksheet7/QTproject/: CMakeLists.txt  ModelPartList.cpp  mainwindow.h  mainwindow.ui  optiondialog.h
